Fixed desctructed ui in landscape mode of mobile and testimonial dots alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -492,6 +492,10 @@ textarea,
 	.header.scrolled { padding: 18px 0; }
 }
 
+@media only screen and (min-device-width : 385px) and (max-device-width : 667px) and (orientation : landscape) {
+	.header .logo { right: 7%; }
+}
+
 /* ------------------------------------------------------------ *\
 	Shell
 \* ------------------------------------------------------------ */
@@ -1223,6 +1227,10 @@ input:-webkit-autofill { -webkit-text-fill-color: #05233c; border-color: #fff; b
 
 }
 
+@media only screen and (min-device-width : 385px) and (max-device-width : 667px) and (orientation : landscape){
+	.nav-secondary { padding-right: 32px; position: relative; top: 0px; }
+}
+
 /* ------------------------------------------------------------ *\
 	Nav Visible
 \* ------------------------------------------------------------ */
@@ -1641,9 +1649,13 @@ input:-webkit-autofill { -webkit-text-fill-color: #05233c; border-color: #fff; b
 
 	/* bellow code is to make carousel swipe effect from edge to edge. */
 	.section-intro .owl-carousel .owl-stage-outer { overflow: visible; }
-	.section-intro .section-container { margin-left: -25px;}
+	.section-intro .section-container { margin-left: -7%; }
+	.section-intro .section-content-inner { max-width: initial; margin: auto; }
 	.section-intro .owl-stage-outer .owl-stage .owl-item { padding-left: 25px; padding-right: 25px; }
+}
 
+@media only screen and (min-device-width : 385px) and (max-device-width : 667px) and (orientation : landscape) {
+	.section-intro .section-container { margin-left: -4%; }
 }
 
 /* ------------------------------------------------------------ *\
@@ -1808,6 +1820,10 @@ input:-webkit-autofill { -webkit-text-fill-color: #05233c; border-color: #fff; b
 	.section-testimonials .owl-carousel .owl-stage-outer { overflow: visible; }
 	.section-testimonials .section-inner-content { margin-left: -25px; }
 	.section-testimonials .owl-stage-outer .owl-stage .owl-item { padding-left: 25px; padding-right: 25px; }
+}
+
+@media only screen and (min-device-width : 385px) and (max-device-width : 667px) and (orientation : landscape) {
+	.section-testimonials .owl-dots { padding-left: 44%; }
 }
 
 /* ------------------------------------------------------------ *\
