--- a/postcss/_module.section.css
+++ b/postcss/_module.section.css
@@ -73,10 +73,14 @@ $breakpoint-mobile {
 
 	/* bellow code is to make carousel swipe effect from edge to edge. */
 	.section-intro .owl-carousel .owl-stage-outer { overflow: visible; }
-	.section-intro .section-container { margin-left: -25px;}
+	.section-intro .section-container { margin-left: -7%; }
+	.section-intro .section-content-inner { max-width: initial; margin: auto; }
 	.section-intro .owl-stage-outer .owl-stage .owl-item { padding-left: 25px; padding-right: 25px; }
 }
 
+$breakpoint-mobile-landscape {
+	.section-intro .section-container { margin-left: -4%; }
+}
 /* ------------------------------------------------------------ *\
 	Section Products
 \* ------------------------------------------------------------ */
@@ -218,7 +222,7 @@ $breakpoint-tablet-portrait {
 
 $breakpoint-mobile {
 	.section-testimonials { padding-bottom: 96px; }
-	.section-testimonials .owl-dots { padding-left: 102px; }
+	.section-testimonials .owl-dots { padding-left: 40%; }
 
 	.section-testimonials .section-content h2 { padding-left: 0; margin-bottom: 15px; }
 
@@ -226,6 +230,10 @@ $breakpoint-mobile {
 	.section-testimonials .owl-carousel .owl-stage-outer { overflow: visible; }
 	.section-testimonials .section-inner-content { margin-left: -25px; }
 	.section-testimonials .owl-stage-outer .owl-stage .owl-item { padding-left: 25px; padding-right: 25px; }
+}
+
+$breakpoint-mobile-landscape {
+	.section-testimonials .owl-dots { padding-left: 44%; }
 }
 
 /* ------------------------------------------------------------ *\
