--- a/postcss/_region.header.css
+++ b/postcss/_region.header.css
@@ -31,3 +31,7 @@ $breakpoint-mobile {
 	.header .shell { min-height: 39px; }
 	.header.scrolled { padding: 18px 0; }
 }
+
+$breakpoint-mobile-landscape {
+	.header .logo { right: 7%; }
+}
